<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DinnerPlanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--
    String for welcome_view.xml
    -->
    <string name="welcome_1">Welcome to Dinner Planner!</string>
    <string name="welcome_2">Here you will be able to easily plan your dinner</string>
    <string name="welcome_3">On the next page start by selecting number of participants. Then select your courses.</string>
    <string name="welcome_4">Watch Magic Happen!</string>
    <string name="start_button">Start</string>
    <string name="title_activity_choose_menu">ChooseMenuActivity</string>

    <!--
    String for choose_menu_bg_view.xml
    -->
    <string name="participants">Participants</string>
    <string name="total_cost">Total Cost: </string>
    <string name="default_cost">0 kr</string>
    <string name="choose_menu">Choose Menu</string>

    <!--
    String for choosing_dishes_view.xml
    -->
    <string name="starter">Starter</string>
    <string name="main_course">Main Course</string>
    <string name="dessert">Dessert</string>
    <string name="create">Create</string>


    <!--
    String for recipe_view.xml
    -->
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="number_of_people">num pers</string>

    <!--
    String for food_choosing_dialog.xml
    -->
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>


</resources>
