<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/welcome_view_id">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_1"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal|left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_2"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center|start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_3"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal|left"
        android:layout_margin="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_4"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal|left"
        android:layout_margin="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp" />
</LinearLayout>
